--- a/cv-project/src/components/styles/App.css
+++ b/cv-project/src/components/styles/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.template {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+}
+
+.information {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1vh;
 }
 
-.App-link {
-  color: #61dafb;
+.columnone, .columntwo {
+  display: flex;
+  flex-direction: column;
+  gap: 1vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row {
+  display: flex;
+  flex-direction: row;
 }
