--- a/cv-project/src/components/styles/App.css
+++ b/cv-project/src/components/styles/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(80, 58, 85);
+  color: white;
+}
 .template {
   display: flex;
   flex-direction: column;
@@ -5,7 +9,13 @@
   text-align: center;
 }
 
+
 .information {
+  width: 70vh;
+  padding-bottom: 2.5vh;
+  margin-bottom: 2vh;
+  border-radius: 1vh;
+  background-color: rgb(130, 93, 118);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,6 +29,48 @@
 }
 
 .row {
+  gap: 2vh;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+}
+
+textarea {
+  resize:none;
+  width: 60vh;
+  border-radius: 0.8vh;
+}
+
+.box > input {
+  width: 60vh;
+}
+
+input {
+  border-radius: 0.8vh;
+  width: 28vh;
+  padding: 0.5vh;
+}
+
+.button {
+  margin-bottom: 2vh;
+}
+
+button {
+  border-radius: 0.7vh;
+}
+
+.add, .remove {
+  width: 5vh;
+}
+
+#submit {
+  width: 10vh;
+}
+
+.header {
+  font-size: 7.5vh;
+}
+
+h2 {
+  margin-bottom: 1vh;;
 }
