Fixed handle functions to store input values in objects

--- a/cv-project/src/components/styles/App.css
+++ b/cv-project/src/components/styles/App.css
@@ -12,8 +12,8 @@ body {
 
 .information {
   width: 70vh;
-  padding-bottom: 2.5vh;
-  margin-bottom: 2vh;
+  padding-bottom: 2vh;
+  margin-bottom: 2.5vh;
   border-radius: 1vh;
   background-color: rgb(130, 93, 118);
   display: flex;
@@ -37,15 +37,16 @@ body {
 
 textarea {
   resize:none;
-  width: 60vh;
+  width: 59.5vh;
   border-radius: 0.8vh;
 }
 
 .box > input {
-  width: 60vh;
+  width: 59vh;
 }
 
 input {
+  border: none;
   border-radius: 0.8vh;
   width: 28vh;
   padding: 0.5vh;
@@ -64,7 +65,8 @@ button {
 }
 
 #submit {
-  width: 10vh;
+  width: 7vw;
+  height: 5vh;
 }
 
 .header {
@@ -73,4 +75,32 @@ button {
 
 h2 {
   margin-bottom: 1vh;;
+}
+
+#boxes {
+  padding-bottom: 2vh;
+}
+
+.cv {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.resume {
+  display: flex;
+  background-color: white;
+  color: black;
+  width: 45vw;
+  height: 100vh;
+  margin: auto;
+}
+
+.headertext {
+  font-size: 3.5vh;
+  border-bottom: solid black 0.3vh;
+}
+
+.headername {
+  font-size: 6.5vh;
 }
