--- a/cv-project/src/components/styles/App.css
+++ b/cv-project/src/components/styles/App.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Times New Roman', Times, serif;
   background-color: rgb(80, 58, 85);
   color: white;
 }
@@ -74,8 +75,23 @@ button {
   font-size: 7.5vh;
 }
 
-h2 {
-  margin-bottom: 1vh;;
+.generalinfo > ul {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  list-style: none;
+  padding: 0;
+  margin-top: 0.5vh;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  font-size: 2.5vh;
+}
+
+.educationview > ul, .work > ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
 }
 
 #boxes {
@@ -88,20 +104,61 @@ h2 {
   text-align: center;
 }
 
+
 .resume {
   display: flex;
+  flex-direction: column;
   background-color: white;
   color: black;
   width: 45vw;
-  height: 100vh;
+  height: 110vh;
   margin: auto;
 }
 
 .headertext {
   font-size: 3.5vh;
-  border-bottom: solid black 0.3vh;
+
+}
+
+.underline {
+  border-bottom: solid black 0.25vh;
+  margin-left: 1.5vh;
+  margin-right: 1.5vh;
+  margin-bottom: 1.5vh;
 }
 
 .headername {
-  font-size: 6.5vh;
+  font-size: 7vh;
+}
+
+.fullname {
+  border-bottom: solid black 0.5vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  padding-top: 3.5vh;
+}
+
+.skills, .education, .workexperience, .summary {
+  text-align: left;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  padding-bottom: 1.5vw;
+}
+
+.text {
+  margin-left: 0.9vw;
+  margin-right: 0.9vw;
+  white-space: pre-line;
+}
+
+
+.bold {
+  font-weight: bold;
+  font-size: 2.35vh;
+}
+
+.split {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
