--- a/cv-project/src/components/styles/App.css
+++ b/cv-project/src/components/styles/App.css
@@ -81,10 +81,10 @@ button {
   flex-direction: row;
   list-style: none;
   padding: 0;
-  margin-top: 0.5vh;
+  margin-top: 1vh;
   margin-left: 3vw;
   margin-right: 3vw;
-  font-size: 2.5vh;
+  font-size: 2.2vh;
 }
 
 .educationview > ul, .work > ul {
@@ -111,8 +111,9 @@ button {
   background-color: white;
   color: black;
   width: 45vw;
-  height: 110vh;
+  min-height: 110vh;
   margin: auto;
+  word-break: break-all;
 }
 
 .headertext {
@@ -146,6 +147,11 @@ button {
 }
 
 .text {
+  margin-left: 0.9vw;
+  margin-right: 0.9vw;
+}
+
+.textbullets {
   margin-left: 0.9vw;
   margin-right: 0.9vw;
   white-space: pre-line;
